fixed bug with details page styling making some tall images get too big

--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,7 @@ footer p {
 .splide__slide img {
   max-width: 100%;
   height: auto;
+  max-height: 75vh;
 }
 
 div#main-slider {
